--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = update
 spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/aia_backend_test
 spring.datasource.username = root
 spring.datasource.password = 123456
+
+#spring.hateoas.use-hal-as-default-json-media-type = false
+spring.data.rest.defaultMediaType = application/json
